--- a/01-birthday-reminder/src/index.css
+++ b/01-birthday-reminder/src/index.css
@@ -15,7 +15,7 @@ html {
 body {
   font: 1.6rem sans-serif;
   color: #343a40;
-  background-color: #F8FAFC;
+  background-color: #FAE8FF;
 }
 
 /* *************************************** */
