some css change in 07-slider

--- a/07-slider/src/index.css
+++ b/07-slider/src/index.css
@@ -24,6 +24,7 @@ section {
   height: 30vh;
   margin: 25vh auto;
   position: relative;
+  overflow: hidden;
 }
 
 /* *************************************** */
