--- a/07-slider/src/components/reviewContainer/reviewContainer.styles.css
+++ b/07-slider/src/components/reviewContainer/reviewContainer.styles.css
@@ -16,11 +16,11 @@
 }
 
 .container-prev {
-  left: -100%;
+  transform: translateX(-100%);
 }
 
 .container-next {
-  left: 100%;
+    transform: translateX(100%);
 }
 
 .image-container {
@@ -29,21 +29,7 @@
   min-width: 110px;
   min-height: 110px;
   border-radius: 100%;
-  position: relative;
-}
-
-.image-container::after {
-  content: "";
-  display: inline-block;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  border-radius: 100%;
-  transform: scale(1.03);
-  background-color: rgba(100, 92, 255, 0.5);
-  box-shadow: 0 0 15px #ccc;
+  border: 4px solid rgba(100, 92, 255, 0.5);
 }
 
 img {
@@ -51,8 +37,6 @@ img {
   height: 100%;
   object-fit: cover;
   border-radius: 100%;
-  position: relative;
-  z-index: 1;
 }
 
 h2,
